--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,4 +50,7 @@ jobs:
       - name: Collectstatic
         run: |
           docker-compose run web python3 manage.py collectstatic 
-
+          
+      - name: Createsuperuser
+        run: |
+          docker-compose run web python3 manage.py createsuperuser
