--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,4 +53,4 @@ jobs:
           
       - name: Createsuperuser
         run: |
-          docker-compose run web python3 manage.py createsuperuser
+          docker-compose run web python3 manage.py createsuperuser --noinput
