--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,4 +53,4 @@ jobs:
           
       - name: Createsuperuser
         run: |
-          docker-compose run web python3 manage.py createsuperuser --username admin --password admin --email alatoo2022@gmail.com 
+          docker-compose run web python3 manage.py createsuperuser --username admin --email alatoo2022@gmail.com 
