--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,6 @@ jobs:
         run: |
           docker-compose run web python3 manage.py collectstatic 
           
-      - name: Createsuperuser
-        run: |
-          docker-compose run web python3 manage.py createsuperuserwithpassword  --username admin --password admin --email admin@example.org --preserve
+#       - name: Createsuperuser
+#         run: |
+#           docker-compose run web python3 manage.py createsuperuserwithpassword  --username admin --password admin --email admin@example.org --preserve
